Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
It looks like sometimes our vendored Flatbuffers tries to include string_view from a bundled absl build and fails:
https://github.com/apache/arrow/runs/4875005603?check_suite_focus=true#step:6:942
In file included from /arrow/cpp/src/plasma/plasma.cc:25: In file included from /arrow/cpp/src/plasma/common_generated.h:7: In file included from /arrow/cpp/thirdparty/flatbuffers/include/flatbuffers/flatbuffers.h:20: In file included from /arrow/cpp/thirdparty/flatbuffers/include/flatbuffers/base.h:217: absl_ep-install/include/absl/strings/string_view.h:39:10: fatal error: 'absl/base/config.h' file not found #include "absl/base/config.h" ^~~~~~~~~~~~~~~~~~~~ 1 error generated.
Attachments
Issue Links
- links to